# openmythos-swarm

./: .gitignore  DEPLOYMENT.md  GITHUB_SETUP.md  PROJECT_SUMMARY.md  README.md  WORKER_SETUP.md  pyproject.toml  requirements.txt  setup.sh
common/: __init__.py  crypto.py  deps.py  manifest.py
contracts/: ZkPotContributionRegistry.sol
data/: approved_code_shards.json  dataset_ledger.py  licenses_allowlist.json  model_plans.py
eth/: __init__.py  anchor.py  receipt.py
master/: scheduler.py  server.py
papers/: build_development_themes.py  development_themes.json  download_papers.py  index.json  themes.json
tests/: test_basic.py  test_dataset_ledger.py  test_eth_receipt.py  test_model_plan_env.py
worker/: client.py  contrib.py  register.py
