[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openmythos-swarm"
version = "0.2.0"
description = "Federated training coordinator for OpenMythos with Mac/NVIDIA/AMD workers"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "OpenMythos Swarm Contributors" }
]
dependencies = [
  "cryptography>=41.0.0",
  "torch>=2.0.0",
  "psutil>=5.9.0",
  "numpy>=1.26.0"
]

[project.scripts]
openmythos-master = "master.server:main"
openmythos-scheduler = "master.scheduler:main"
openmythos-worker = "worker.contrib:main"

[tool.setuptools]
packages = ["common", "master", "worker"]
